tests/==out/lang_verilog.error.2.gc.out
vccs #(.gm({alpha*adap}))) iF(0 f cd 0); 
           ^ ? vccs #(.gm({alpha*adap}))) iF(0 f cd 0); 
           ^ ? what's this?
crash(x, y); 
^ ? crash: no match
// syntax error, no label 
print tran v(x) v(y) 
             ^ ? no match
print tran v(x) v(y) 
                  ^ ? no match
